objects/Robot_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE( MOD( Date__c - DATE(1900, 1, 7), 7), 0, &apos;Sunday&apos;, 1, &apos;Monday&apos;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Robot Setups</relationshipLabel>
        <relationshipName>Robot_Setups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Robot Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROBOT SETUP-{0000}</displayFormat>
        <label>Robot Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Robot Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>